# MandelbrotAsm

./: CMakeLists.txt  MandelbrotAsm.cpp  README.md  build.bat  core.asm  palette.txt  pallete.py
.github/workflows/: blank.yml
deepfortran/: compile.bat  deepmandelbrot.f90
